--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ab",
   "version": "0.0.0",
-  "description": "ab",
+  "description": "A benchmark tool.",
   "main": "index.js",
   "scripts": {
     "test": "make test-all",
