--- a/package.json
+++ b/package.json
@@ -43,6 +43,10 @@
   "engines": {
     "node": ">= 0.8.0"
   },
-  "author": "fengmk2 <fengmk2@gmail.com> (http://fengmk2.github.com)",
+  "author": {
+    "name": "fengmk2",
+    "email": "fengmk2@gmail.com",
+    "url": "http://fengmk2.github.com"
+  },
   "license": "MIT"
 }
