--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "make test-all",
-    "blanket": { 
+    "blanket": {
       "pattern": "ab/lib",
       "data-cover-flags": {
         "debug": false
@@ -16,8 +16,8 @@
     }
   },
   "dependencies": {
-    "microtime": "0.4.0",
-    "debug": "0.7.2"
+    "microtime": ">=0.5.0",
+    "debug": ">=0.7.4"
   },
   "devDependencies": {
     "should": "*",
