--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "debug": ">=0.7.4"
   },
   "devDependencies": {
+    "contributors": "*",
     "should": "*",
     "blanket": "*",
     "travis-cov": "*",
