--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     }
   },
   "dependencies": {
-    "microtime": ">=0.5.0",
-    "debug": ">=0.7.4"
+    "microtime": "~0.5.1",
+    "debug": "~1.0.1"
   },
   "devDependencies": {
+    "autod": "*",
     "contributors": "*",
     "should": "*",
     "blanket": "*",
